[package]
name = "toxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.14.1", features = ["derive"] }
glam = "0.25.0"
wgpu = "0.19.1"
winit = { version = "0.29.10", features = ["rwh_05"] }

[dev-dependencies]
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[[test]]
name = "render_state"
path = "tests/render_state.rs"
harness = true
